@@ -28,6 +28,7 @@
       + =script/server-with-metrics= 스크립트로 실행
       + [[http://localhost:3000]] 사이트 방문
     - slack input 지표를 grafana에서 볼 수 있게 추가
+    - gitlab request 지표를 grafana에서 볼 수 있게 추가
 
 ** [[https://github.com/ohyecloudy/slab/compare/v1.0.7...v1.0.8][v1.0.8]]
 
